--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This is the repository for my operating systems class CSCI460. My toolchain is stored in the bash folder. Please read the comments before executing.
+# header!
+This is the repository for my operating systems class CSCI460. My toolchain is
+stored in the bash folder. Please read the comments before executing.
